2009-04-20  Jb Evain  <jbevain@novell.com>

	* Initial commit of my week-end's hack: a fully managed pdb2mdb.