@@ -1,3 +1,7 @@
+2009-04-21  Jb Evain  <jbevain@novell.com>
+
+	* Driver.cs: don't crash if a function doesn't have line information.
+
 2009-04-20  Jb Evain  <jbevain@novell.com>
 
 	* Initial commit of my week-end's hack: a fully managed pdb2mdb.
